--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         /* Footer */
         .footer {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 15px; /* Kurangi margin-top agar tulisan lebih ke atas */
         }
 
         .footer strong {
