--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             background: rgba(218, 219, 212, 0.8);
             border-radius: 15px;
             padding: 20px;
+            padding-bottom: 50px; /* Tambahkan ruang di bawah */
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: column;
@@ -40,7 +41,7 @@
             font-size: 36px;
             color: #d4af37;
             text-align: center;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
 
         /* Konten */
@@ -66,13 +67,16 @@
         /* Footer */
         .footer {
             text-align: center;
-            margin-top: 15px; /* Kurangi margin-top agar tulisan lebih ke atas */
+            margin-top: 10px; /* Kurangi margin-top agar tulisan lebih ke atas */
+            margin-bottom: 10px;
         }
 
         .footer strong {
             font-family: 'Pacifico', cursive;
             color: #d4af37;
             font-size: 20px;
+            word-wrap: break-word; /* Memastikan teks tidak terpotong */
+            white-space: normal; /* Menghindari teks melampaui layar */
         }
 
         /* Timer */
