--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
             trust me, semuanya akan berjalan dengan baik dan sesuai harapan!
             Doa terbaik untukmu !
             <br><br>
+            Akan ada episode baru di tahun tahun berikutnya, tolong tetap sehat, kuat dan semangat sampai bahagia itu terlihat !
+            <br><br>
             Oiyaa karna kamu sudah berhasil memecahkan teka teki nya dan sudah mengakses website ini 
             <br><br>
             Jika kamu lihat harta karun, klik ya !!🎁
@@ -236,8 +238,8 @@
                 <li>Pilih opsi untuk mendaftar akun trading Stockbit Sekuritas</li>
                 <li>Pilih RDN BCA atau RDN Bank Jago</li>
                 <li>Jika memilih RDN BCA, masukkan nomor rekening BCA dan nama lengkap untuk verifikasi</li>
-                <li>Jika memilih RDN Bank Jago, lakukan selfie sesuai petunjuk, lengkapi formulir Data</li>
-                <li>Pekerjaan, dan masukkan PIN dan kode OTP Bank Jago</li>
+                <li>Jika memilih RDN Bank Jago, lakukan selfie sesuai petunjuk, lengkapi formulir Data Pekerjaan</li>
+                <li>Masukkan PIN dan kode OTP Bank Jago</li>
                 <li>Tunggu verifikasi dari Stockbit selama satu hari kerja</li>
             </ul>
             Jika sudah, nanti akan ku transfer beberapa saham yess ❤️
@@ -269,7 +271,7 @@
 
                 if (timeLeft < 0) {
                     clearInterval(interval);
-                    timerElement.innerText = "❤️❤️:')❤️❤️!";
+                    timerElement.innerText = "❤️❤️Taraaa! HBD Kubis Goreng❤️❤️";
 
                 // Memicu confetti
                 launchConfetti();
