--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
             background: url('treasure-chest-open.png') no-repeat center center;
         }
 
+        .treasure-chest:hover {
+            transform: scale(1.1);
+            transition: transform 0.3s ease;
+        }
+
         /* Modal */
         .modal {
             position: fixed;
